+ Fixing overflow bug on all devices
 + Adjsuting css foe featured collection and  lookboko slideshow to adress other visual bugs

--- a/assets/base-custom.css
+++ b/assets/base-custom.css
@@ -26,6 +26,7 @@ body {
 .site-wrapper {
     position: relative;
     width: 100%;
+    overflow-x: hidden;
 }
 
 .isolate,
